--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -12,5 +12,9 @@ quick.
 Begin at windows.h and from the top of the file, comment out one macro at a time. After the program breaks.
 Fix it. after enough work, push; repeat. 
 
+1.2 delete refactored code that has been commented
+
+1.3 maybe start documenting a bit of the code
+
 9/22/2021
 1) test child like behavior. the expunge function is confusing as fuck.
